Completed Starting-Page

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -19,10 +19,10 @@ My Blog
 
 <section id="welcome">
   <header>
-    <img src="" alt="Max - The Author Of This Blog" />
-    <h2>MAXIMILIAN'S BLOG</h2>
+    <img src="{% static "blog/images/yash.jpeg" %}" alt="Yash- The Author Of This Blog" />
+    <h2>YASH'S BLOG</h2>
   </header>
-  <p>Hi, I am Max and I love to blog about tech and the world!</p>
+  <p>Hi, I am Yash and I love to blog about tech and the world!</p>
 </section>
 
 <section id="latest-posts">
@@ -32,7 +32,7 @@ My Blog
     <li>
       <article class="post">
         <a href="">
-          <img src="" alt="Mountain Hiking" />
+          <img src= "{% static "blog/images/mountains.jpeg" %}" alt="Mountain Hiking" />
           <div class="post__content">
             <h3>Mountain Hiking</h3>
             <p>
