--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -13,17 +13,19 @@ My Blog
 {% block content %}
 <section id="welcome">
   <header>
-    <img src="{% static "blog/images/yash.jpeg" %}" alt="Max - The Author Of This Blog" />
-    <h2>MAXIMILIAN'S BLOG</h2>
+    <img src="{% static "blog/images/yash.jpeg" %}" alt="Yash - The Author Of This Blog" />
+    <h2>YASH'S BLOG</h2>
   </header>
-  <p>Hi, I am Max and I love to blog about tech and the world!</p>
+  <p>Hi, I am Yash and I love to blog about tech and the world!</p>
 </section>
 
 <section id="latest-posts">
   <h2>My Latest Thoughts</h2>
 
   <ul>
-    {% include "blog/includes/post.html" %}
+    {% for post in posts %}
+      {% include "blog/includes/post.html" %}
+    {% endfor %}
   </ul>
 </section>
 
