--- a/blog/static/blog/all-posts.css
+++ b/blog/static/blog/all-posts.css
@@ -41,3 +41,7 @@ body {
     border-radius: 12px;
     background-color: white;
   }
+  .tag{
+    background-color: white;
+    color: #5706c0;
+  }
