--- a/blog/static/blog/post-detail.css
+++ b/blog/static/blog/post-detail.css
@@ -22,6 +22,7 @@ body {
   #summary h2 {
     color: white;
     font-size: 4.5rem;
+    margin-bottom: 0.25rem;
   }
   
   #summary article {
@@ -47,6 +48,12 @@ body {
     font-weight: bold;
   }
   
+  #summary a{
+    color: white;
+    text-decoration: none;
+
+  }
+
   #summary time {
     font-weight: bold;
   } 
@@ -59,4 +66,8 @@ body {
     padding: 1rem;
     border-radius: 12px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  }
+  .tag{
+    background-color: white;
+    color: #5706c0;
   }
