--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -20,7 +20,7 @@
   </div>
   <article>
     <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}" />
-    <address>By <a href="mailto:{{post.author.email_address}}" style="color:white,text-decoration:none">{{ post.author }}</a></address>
+    <address>By <a href="mailto:{{post.author.email_address}}" style="color:white;text-decoration:none">{{ post.author }}</a></address>
     <div>Last updated on <time>{{ post.date|date:"d M Y" }}</time></div>
   </article>
 </section>
