--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header id="main-navigation">
-    <h1><a href="{% url "starting-page" %}">Max' Blog</a></h1>
+    <h1><a href="{% url "starting-page" %}">Yash's Blog</a></h1>
     <nav>
       <a href="{% url "posts-page" %}">All Posts</a>
     </nav>
